[ST] Env configuration of execution
Signed-off-by: David Kornel <kornys@outlook.com>